diesel_compile_tests/tests/fail/derive/bad_table_name.stderr
error: unexpected end of input, expected `=`
  --> $DIR/bad_table_name.rs:12:9
   |
12 | #[diesel(table_name)]
   |         ^^^^^^^^^^^^

error: expected `=`
  --> $DIR/bad_table_name.rs:18:20
   |
18 | #[diesel(table_name(users))]
   |                    ^^^^^^^

error: expected identifier
  --> $DIR/bad_table_name.rs:24:23
   |
24 | #[diesel(table_name = true)]
   |                       ^^^^

error: expected identifier
  --> $DIR/bad_table_name.rs:30:23
   |
30 | #[diesel(table_name = "not a path")]
   |                       ^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `does`
  --> $DIR/bad_table_name.rs:36:23
   |
36 | #[diesel(table_name = does::not::exist)]
   |                       ^^^^ use of undeclared crate or module `does`
